tests/compile-fail/derive_salsa_value_field_not_salsa_value.rs
use std::marker::PhantomData;

struct NotSalsaValue<'db>(PhantomData<fn() -> &'db ()>);

#[derive(salsa::SalsaValue)]
struct Value<'db> {
    field: NotSalsaValue<'db>,
}

fn main() {}
