tests/compile-fail/derive_salsa_value_field_not_salsa_value.stderr
error[E0277]: `NotSalsaValue<'db>` doesn't implement `SalsaValue`
 --> tests/compile-fail/derive_salsa_value_field_not_salsa_value.rs:7:12
  |
7 |     field: NotSalsaValue<'db>,
  |            ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `SalsaValue` is not implemented for `NotSalsaValue<'db>`
 --> tests/compile-fail/derive_salsa_value_field_not_salsa_value.rs:3:1
  |
3 | struct NotSalsaValue<'db>(PhantomData<fn() -> &'db ()>);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: add `#[derive(salsa::SalsaValue)]` to `NotSalsaValue<'db>`
  = help: the following other types implement trait `SalsaValue`:
            &'static T
            ()
            (A, B)
            (A, B, C)
            (A, B, C, D)
            (A, B, C, D, E)
            (A, B, C, D, E, F)
            (A, B, C, D, E, F, G)
          and $N others
note: required by a bound in `salsa::plumbing::assert_salsa_value`
 --> src/salsa_value.rs
  |
  |     pub const fn assert_salsa_value<T: SalsaValue>() {}
  |                                        ^^^^^^^^^^ required by this bound in `assert_salsa_value`
